my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-prediction-service
  labels:
    app: sentiment-prediction
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    name: tcp-8000
    targetPort: 8000
  selector:
    app: sentiment-prediction-api
