my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentiment-prediction-service-ingress
spec:
  defaultBackend:
    service:
      name: sentiment-prediction-service
      port:
        number: 8000
